<resources>
    <string name="app_name" translatable="false">Dnevnjak</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    <string name="login">Login</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_day_schedule">Daily plan</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tmp_email">TMP EMAIL</string>
    <string name="username">  Username</string>
    <string name="password">  Password</string>
    <string name="mon">Mon</string>
    <string name="add">Add</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="choose_time">Choose Time</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="high">High</string>
    <string name="mid">Mid</string>
    <string name="low">Low</string>
    <string name="create">Create</string>
</resources>