<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/LighterBlue"
    tools:context=".view.activities.AddTaskActivity">

    <ImageView
        android:id="@+id/slikaSata"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="87dp" />

    <TextView
        android:id="@+id/detailedTime"
        android:layout_width="154dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="top|start|center|bottom"
        android:hint="@string/time"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="89dp" />

    <TextView
        android:id="@+id/detailedTitle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:gravity="top|start|center|bottom"
        android:hint="@string/title"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedTime"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/detailedDescription"
        android:layout_width="340dp"
        android:layout_height="458dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_rounded_bg"
        android:gravity="top|start"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:maxLines="20"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedTitle"
        app:layout_constraintVertical_bias="0.214"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonEdituj"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailedDescription"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/LightDarkBlue"
        android:text="@string/edit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonObrisi"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonObrisi"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailedDescription"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/LightDarkBlue"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>

